fix button align

--- a/styles/components/_welcome.scss
+++ b/styles/components/_welcome.scss
@@ -50,7 +50,12 @@
 
   .nowrap{
     white-space: nowrap !important;
- }
+  }
+
+  .align-right{
+    margin-right: 0;
+    margin-left: auto;
+  }
 }
 
 .welcome-container-liquid-staking {
